# dob-plasmoid

./: .gitignore  CMakeLists.txt  DobHtmlParser.cpp  DobHtmlParser.h  LICENSE  WebManager.cpp  WebManager.h  config.cpp  config.h  dob.cpp  dob.h  options.h  plasma-applet-dob.desktop  settings.ui  ui_settings.h
